<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="18dp"
            android:orientation="vertical"
            android:background="#2A2A37"
            android:layout_width="match_parent"
            android:layout_height="145dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView

                    android:layout_weight="1"
                    android:paddingTop="30dp"
                    android:textColor="@color/white"
                    android:text="@string/house"
                    android:textSize="23sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_weight="1"
                    android:onClick="Profile"
                    android:src="@drawable/btnsettings"
                    android:contentDescription="@string/settings_button"
                    android:layout_width="wrap_content"
                    android:layout_height="54dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/iconlocation"
                    android:contentDescription="@string/location_icon"
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/addressText"
                    android:textColor="#93939A"
                    android:textSize="13sp"

                    android:text="@string/adresss"
                    android:paddingStart="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView

                android:textColor="@color/white"
                android:text="@string/rooms"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ImageView
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_margin="18dp"
        android:onClick="Add"
        android:src="@drawable/btnadd"
        android:contentDescription="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
